Testing TF datasets

--- a/test_values.ipynb
+++ b/test_values.ipynb
@@ -10,12 +10,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.6-candidate"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1600787580112",
-   "display_name": "Python 3.8.5 64-bit ('forecast': venv)"
+   "name": "Python 3.8.6 64-bit",
+   "display_name": "Python 3.8.6 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "478982a4243440df92b1547fc78ff3a53fb769bb4793740edc2798d27fa620e3"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -38,6 +43,56 @@
    "source": [
     "x = '12345 678910'\n",
     "x.split(' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "   feature1  feature2  feature3  target\n0  0.881408  0.939776  0.940797       1\n1  0.682560  0.862495  0.295187       0\n2  0.454921  0.694499  0.011468       2\n3  0.274548  0.298183  0.748903       2\n4  0.361632  0.421883  0.614494       0\n5  0.884756  0.618306  0.837496       0\n6  0.608491  0.790785  0.767473       0\n7  0.540810  0.535415  0.791924       0\n8  0.888698  0.570411  0.980605       1\n9  0.472542  0.449280  0.548602       1\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<TensorSliceDataset shapes: ((3,), ()), types: (tf.float32, tf.int32)>"
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "\n",
+    "training_df: pd.DataFrame = pd.DataFrame(\n",
+    "    data={\n",
+    "        'feature1': np.random.rand(10),\n",
+    "        'feature2': np.random.rand(10),\n",
+    "        'feature3': np.random.rand(10),\n",
+    "        'target': np.random.randint(0, 3, 10)\n",
+    "    }\n",
+    ")\n",
+    "features = ['feature1', 'feature2', 'feature3']\n",
+    "print(training_df)\n",
+    "\n",
+    "training_dataset = (\n",
+    "    tf.data.Dataset.from_tensor_slices(\n",
+    "        (\n",
+    "            tf.cast(training_df[features].values, tf.float32),\n",
+    "            tf.cast(training_df['target'].values, tf.int32)\n",
+    "        )\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "training_dataset"
    ]
   },
   {
