Fixed graph error

--- a/tensorflow/app_v4.ipynb
+++ b/tensorflow/app_v4.ipynb
@@ -288,7 +288,7 @@
     "plt.plot(np.arange(0, len(y_train)), y_train, 'g')\n",
     "plt.plot(np.arange(len(y_train), (len(y_train)+len(y_pred_val))), y_pred_val, 'r')\n",
     "plt.plot(np.arange(len(y_train), (len(y_train)+len(y_pred_val))), y_val, 'b')\n",
-    "plt.legend(['Train data', 'Validation data', 'Predicted validation data'])\n",
+    "plt.legend(['Train data', 'Predicted validation data', 'Actual validation data'])\n",
     "plt.xlabel('Samples')\n",
     "plt.ylabel('Value')\n",
     "plt.show()"
